<resources>
    <string name="app_name">AuthenticatorApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_email">Username/ Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member">Already A Member?</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password">Reset password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_articles_by_title">Search articles by title...</string>
    <string name="like_button">Like button</string>
    <string name="beautiful_landscape_view">Beautiful Landscape View</string>
    <string name="captured_in_the_serene_mountains_of_alberta_canada">Captured in the serene mountains of Alberta, Canada.</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_article">favorite article</string>
</resources>